--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,8 +5,7 @@
   line-height: 1.14;
   text-align: right;
   margin-bottom: 0;
-  align-self: end;
-  /* border: 1px solid white; */
+  align-self: end; /* ставим элемент в конец блока */
 }
 
 @media screen and (max-width: 320px) {
