--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,28 +1,9 @@
 .footer__link {
-  margin: 0 18px 0 0;
+  text-decoration: none;
+  color: white;
+  transition: opacity 0.3s ease;
 }
 
-.footer__link:last-child {
-  margin-right: 0;
-}
-
-@media screen and (max-width: 649px) {
-  .footer__link {
-    margin-bottom: 32px;
-  }
-  .footer__link:last-child {
-    margin-bottom: 0;
-  }
-
-}
-
-
-@media screen and (max-width: 320px) {
-  .footer__link {
-    margin-bottom: 32px;
-  }
-  .footer__link:last-child {
-    margin-bottom: 0;
-  }
-
+.footer__link:hover {
+  opacity: 80%;
 }
