--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,7 +11,7 @@
   text-align: center;
   text-rendering: optimizeLegibility;
 
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 @media screen and (max-width: 760px){
@@ -19,7 +19,6 @@
     width: calc(100% - 2 * 24);
     font-size: 45px;
     line-height: 1.1;
-    /* width: 320px; */
   }
 }
 
@@ -28,6 +27,5 @@
     font-size: 40px;
     line-height: 1.1;
     max-width: calc(100% - 2 * 16);
-    /* max-width: 288px; */
   }
 }
