--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
+  margin-bottom: 92px;
   border: 1px solid white;
 }
 
@@ -18,6 +19,7 @@
   .photo-grid {
     width: calc(100% - 2 * 24px);
     gap: 16px;
+    margin-bottom: 90px;
   }
 }
 
@@ -25,5 +27,6 @@
   .photo-grid {
     width: calc(100% - 2 * 16px);
     gap: 12px;
+    margin-bottom: 99px;
   }
 }
