commit finish version 22-04-08

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,11 +3,13 @@
   color: #FFFFFF;
   font-weight: 400;
   background-color: #2A2C2F;
-  max-width: 1280px;
+  max-width: 1600px;
   min-width: 320px;
   min-height: 1000px;
   margin: 0 auto;
   padding: 28px 0 24px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
   /* border: 1px solid yellow; */
 }
