--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,12 +2,10 @@
   align-self: end;
   margin: 0;
   padding: 0;
-  border: 1px solid green;
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 320px) {
   .place__website {
-    max-width: calc(100% - 32px);
-    padding-left: 16px;
+    margin: 0 16px;
   }
 }
