--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,7 +5,6 @@
   margin: 0;
   align-self: end;
   text-rendering: optimizeLegibility;
-  border: 1px solid green;
 }
 
 @media screen and (max-width: 768px) {
@@ -19,7 +18,6 @@
   .place__title {
     font-size: 32px;
     line-height: 1.09;
-    margin-left: 16px;
-    margin-bottom: 16px;
+    margin: 0 16px;
   }
 }
