--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,6 +3,9 @@
   color: #FFFFFF;
   font-weight: 400;
   background-color: #2A2C2F;
+
+  display: flex;
+  flex-direction: column;
   max-width: 1600px;
   min-width: 320px;
   min-height: 1000px;
@@ -10,6 +13,15 @@
   padding: 28px 0 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 
   /* border: 1px solid yellow; */
 }
