--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,5 @@
 .lead__title {
   max-width: 720px;
-  /* max-width: 100%; */
-  /* height: 200px; */
   margin: 0 auto;
   font-family: 'Inter';
   font-style: normal;
@@ -10,13 +8,11 @@
   line-height: 1.04;
   text-align: center;
   text-rendering: optimizeLegibility;
-
-  /* border: 1px solid red; */
 }
 
 @media screen and (max-width: 760px){
   .lead__title {
-    width: calc(100% - 2 * 24);
+    width: calc(100% - 2 * 24px);
     font-size: 45px;
     line-height: 1.1;
   }
@@ -26,6 +22,6 @@
   .lead__title {
     font-size: 40px;
     line-height: 1.1;
-    max-width: calc(100% - 2 * 16);
+    max-width: calc(100% - 2 * 16px);
   }
 }
