second rewiev- cerrected scrolling

--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -3,6 +3,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
+  text-align: center;
 }
 
 .footer__item:last-child {
@@ -21,11 +22,3 @@
   }
 }
 
-@media screen and (max-width: 320px) {
-  .footer__item {
-    margin-bottom: 32px;
-  }
-  .footer__item:last-child {
-    margin-bottom: 0;
-  }
-}
