--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,15 +8,19 @@
   text-align: right;
   margin: 18px 0 6px 18px;
   color: #FFFFFF;
-  /* border: 1px solid white; */
   float: right;
 
   text-decoration: none;
   text-decoration-line: none;
+
+  transition: opacity 0.2s ease;
 }
 .header__lang-link:last-child {
-  margin: 18px 0 0;
-  text-decoration: underline;
+  margin: 18px 0 8px;
+}
+
+.header__lang-link:hover {
+  opacity: 80%;
 }
 
 @media screen and (max-width: 320px) {
@@ -26,5 +30,9 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 1.11;
+    margin: 14px 0 6px 18px;
+  }
+  .header__lang-link:last-child {
+    margin: 14px 0 8px;
   }
 }
