--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,5 @@
 .intro__list {
-  width: 690px;
+  width: 100%;
 
   font-family: 'Inter';
   font-style: normal;
@@ -12,7 +12,7 @@
   list-style: none;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 360px) {
   .intro__list {
     margin-top: 34px;
   }
