--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,36 +1,26 @@
 .intro {
-  /* display: flex;
-  width: auto;
-  flex-direction: column;
-  align-items: flex-start; */
-  max-width: 690px;
-  margin: 0;
-  margin-left: 148px;
+  width: calc(100% - 2 * 148px);
+  margin: auto;
   margin-bottom: 92px;
-  padding: 0;
-  /* border: 1px solid yellow; */
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
-    max-width: 690px;
-    margin-left: 48px;
-    margin-bottom: 92px;
+    width: calc(100% - 2 * 48px);
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 790px) {
   .intro {
-    margin: 0 auto;
-    margin-bottom: 88px;
     width: calc(100% - 2 * 24px);
+    margin-bottom: 88px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 360px) {
   .intro {
     max-width: calc(100% - 2 * 16px);
-    margin: 0 auto;
     margin-bottom: 64px;
   }
 }
