--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,25 +5,23 @@
   width: calc(100% - 2 * 148px);
   margin: 56px auto 92px;
   padding: 0;
-  /* border: 1px solid green; */
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
     width: calc(100% - 2 * 48px);
-    margin: 48px auto 114px;
+    margin-top: 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
     width: 100%;
-    margin: 48px 0 110px;
+    margin-bottom: 88px;
   }
 }
 @media screen and (max-width: 320px) {
   .lead {
-    width: 100%;
-    margin: 48px 0 64px;
+    margin-bottom: 64px;
   }
 }
