--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,11 +12,11 @@
 @media screen and (max-width: 1020px) {
   .place__paragraph {
     font-size: 16px;
-    margin: 0 auto 25px;
+    margin-bottom: 25px;
   }
 }
 @media screen and (max-width: 320px) {
   .place__paragraph {
-    margin: 0 16px;
+    margin: 0 16px 25px;
   }
 }
